# mlops_crew

./: .dockerignore  .gitignore  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  dvc.yaml  predict.dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  serve.dockerfile  train.dockerfile
.dvc/: config
.github/workflows/: ci.yml  cml.yml  deploy-to-hf.yml  deploy_hf_space.yml  docker-publish.yml
api/: README.md  __init__.py  main.py  schemas.py
app/: app.py
conf/: README.md  config.yaml
conf/experiment/: phase2_default.yaml  phase2_experimental.yaml
conf/logging/: default.yaml
configs/: README.md  config.yaml
configs/data/: default.yaml  experimental.yaml
configs/hydra/: config.yaml
data/: README.md
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: archive.dvc
docs/: PHASE1.md  PHASE2.md  PHASE3.md  TOOL_DOCUMENTATION.md  api.md  cleanup.md  debugging_examples.md  getting_started.md  index.md  mkdocs.yml  phase2_implementation_and_verification.md  phase2_reproduction_commands.md  windows_setup.md
functions/predict/: README.md  main.py  requirements.txt
hf_space/: README.md  app.py  requirements.txt
models/: .gitignore  README.md
notebooks/: README.md  phase1_experiment.ipynb  phase2_divergence_analysis.ipynb  phase2_model_development.ipynb
reports/: .gitignore  README.md
reports/metrics/: complement_nb_metrics.json  dummy_metrics.json  linear_svc_metrics.json  logistic_regression_metrics.json  model_comparison.csv  model_comparison.json  phase3_holdout_metrics.json
reports/metrics/phase1_baseline/: README.md  best_model_metrics.json  model_comparison.csv
reports/profiling/: README.md  predict_model_cprofile.txt  train_model_cprofile.txt
scripts/: deploy_gcp.sh  load_test_api.py  profile_predict.py  profile_train.py  verify_phase2.ps1  verify_phase2.sh
src/mlops_crew/: __init__.py  config.py  logging_config.py  predict_model.py  train_hydra.py  train_model.py
src/mlops_crew/data/: __init__.py  clean.py  combine.py  export_transformer_dataset.py  loaders.py  make_dataset.py  preprocess.py  sample.py  source_manifest.py  split.py  validate.py
src/mlops_crew/evaluation/: __init__.py  metrics.py  phase3_holdout_eval.py  plot_model_comparison.py
src/mlops_crew/features/: __init__.py  build_features.py
src/mlops_crew/models/: __init__.py  model.py  predict_model.py  serving.py  text_classifiers.py  train_model.py
src/mlops_crew/monitoring/: __init__.py  divergence.py  inference_latency.py  resource_monitor.py
src/mlops_crew/tracking/: mlflow_tracking.py
src/mlops_crew/utils/: __init__.py  io.py  logging_setup.py  seed.py
src/mlops_crew/visualization/: __init__.py  visualize.py
tests/: conftest.py  test_api.py  test_hf_space_app.py  test_logging_and_hydra.py  test_model.py  test_phase1_pipeline.py  test_phase2_monitoring.py  test_serving.py
