[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_crew"
version = "0.1.0"
description = "Phishing email detection: a reproducible MLOps pipeline."
authors = [{name = "MLOps Crew"}]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0",
    "dvc[s3]>=3.55.0",
    "mlflow>=3.0,<4",
    "psutil>=6.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

# Notebooks are exploratory developer scratchpads: relax the line-length and
# allow imports that are documented but not strictly used (e.g. `Path` shown
# as part of the standard setup) so the source code rules can stay strict
# without making notebook authors fight the linter.
[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["src"]
