[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_crew"
version = "0.1.0"
description = "Phishing email detection: a reproducible MLOps pipeline."
authors = [{name = "MLOps Crew"}]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy==2.4.4",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
    "matplotlib==3.10.9",
    "pyyaml==6.0.3",
    "dvc[s3]==3.67.1",
    "mlflow==3.12.0",
    "psutil==7.2.2",
    "scipy==1.17.1",
    "rich==15.0.0",
    "hydra-core==1.3.2",
    "fastapi[standard]==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.12.3",
    "requests==2.33.1",
    "google-cloud-storage==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

# Notebooks are exploratory developer scratchpads: relax the line-length and
# allow imports that are documented but not strictly used (e.g. `Path` shown
# as part of the standard setup) so the source code rules can stay strict
# without making notebook authors fight the linter.
[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["src"]
